[project]
name = "load-gen"
version = "0.1.0"
description = "Small Locust-based experiment runner for paper-quality autoscaling evaluations."
requires-python = ">=3.10"
dependencies = [
  "Faker>=24.0",
  "locust>=2.24",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[project.scripts]
load-gen = "loadgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
